[package]
name = "entiers"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
rand = "0.9.0"
procfs = "0.17.0"

# [[bin]]
# name = "keygen"
# path = "src/consommation/keygen.rs"

[[bin]]
name = "un_entier"
path = "src/precision_temps/un_entier.rs"

[[bin]]
name = "deux_entiers"
path = "src/precision_temps/deux_entiers.rs"

# [[bin]]
# name = "encrypt"
# path = "src/consommation/encrypt.rs"

# [[bin]]
# name = "add"
# path = "src/consommation/add.rs"

[[bin]]
name = "programme_temps"
path = "src/precision_temps/programme_temps.rs"

[[bin]]
name = "tri_liste"
path = "src/precision_temps/tri_liste.rs"

[[bin]]
name = "addition"
path = "src/consommation/addition.rs"

[[bin]]
name = "additionshortint"
path = "src/consommation/additionshortint.rs"

[[bin]]
name = "multiplication"
path = "src/consommation/multiplication.rs"

[[bin]]
name = "division"
path = "src/consommation/division.rs"

[[bin]]
name = "comparaison"
path = "src/consommation/comparaison.rs"

[[bin]]
name = "max"
path = "src/consommation/max.rs"

[[bin]]
name = "selectionconditionnelle"
path = "src/consommation/selectionconditionnelle.rs"

[[bin]]
name = "multiplicationpmap"
path = "src/consommation/multiplicationpmap.rs"

[[bin]]
name = "factoriel"
path = "src/consommation/factoriel.rs"

[[bin]]
name = "securite"
path = "src/consommation/securite.rs"

[[bin]]
name = "soustraction"
path = "src/consommation/soustraction.rs"

[[bin]]
name = "operation_temps"
path = "src/precision_temps/operation_temps.rs"

